--- a/wally.toml
+++ b/wally.toml
@@ -6,5 +6,5 @@
 
 [dependencies]
   Fusion = "plainsour/lemon@0.3.0-dev.5.9"
-  ohmyprvd = "znotfireman/ohmyprvd@0.1.0-alpha"
+  prvd = "znotfireman/ohmyprvd@0.1.1-alpha"
   t = "osyrisrblx/t@3.1.1"
